feat(xgboost): first model for content-based

--- a/notebooks/EDA_interactions.ipynb
+++ b/notebooks/EDA_interactions.ipynb
@@ -9484,7 +9484,7 @@
     "    Similarly, most users interact with a **small number of items**, with a few users being **highly active**.\n",
     "\n",
     "- **What is the distribution of interactions per hour in a day for weekdays and weekends?**  \n",
-    "  - *This detail wasn't specified in the summary provided.*\n",
+    "  - #FIXME\n",
     "\n",
     "- **Which items are the most popular?**  \n",
     "  - The IDs of the most popular items are listed in the associated Python cell.  \n",
@@ -9538,10 +9538,7 @@
     "  \n",
     "- **User engagement** is relatively high, with an average of over 1,600 interactions per user. However, there's considerable variability, indicating that some users are extremely active while others are more passive.\n",
     "\n",
-    "- The **watch_ratio** is a particularly insightful metric. On average, users watch **most of the video content**, as reflected in the high average (0.95) and the distribution peaking around 0.8. A third of all interactions involved watching the video more than once (watch_ratio > 1), while about 9% indicate likely skips (watch_ratio < 0.1).\n",
-    "\n",
-    "- The **time range** of two months provides a focused window for behavior analysis, and the presence of **timestamped data** opens up possibilities for deeper temporal analysis (e.g., daily/weekly patterns, session-based behavior).\n",
-    "\n"
+    "- The **watch_ratio** is a particularly insightful metric. On average, users watch **most of the video content**, as reflected in the high average (0.95) and the distribution peaking around 0.8. A third of all interactions involved watching the video more than once (watch_ratio > 1), while about 9% indicate likely skips (watch_ratio < 0.1)."
    ]
   }
  ],
