--- a/notebooks/EDA_user_behaviour.ipynb
+++ b/notebooks/EDA_user_behaviour.ipynb
@@ -14,7 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "d89b32fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_daily_item = pd.read_csv('../data_final_project/KuaiRec 2.0/data/item_daily_features.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7de18537",
    "metadata": {},
    "outputs": [],
@@ -29,14 +39,11 @@
     "    xlabel (str): Label for the x-axis.\n",
     "    ylabel (str): Label for the y-axis.\n",
     "    \"\"\"\n",
-    "    # Create the bar plot\n",
     "    fig, ax = plt.subplots(figsize=(10, 6))\n",
     "    bars = data_series.plot(kind='bar', ax=ax, legend=False)\n",
     "    if percentages:\n",
-    "        # Calculate percentages\n",
     "        total = data_series.sum()\n",
     "        \n",
-    "        # Add percentages on top of bars\n",
     "        for i, (label, value) in enumerate(data_series.items()):\n",
     "            percentage = (value / total * 100).round(2)\n",
     "            ax.annotate(f'{percentage}%', \n",
@@ -46,7 +53,6 @@
     "                    fontsize=10,\n",
     "                    color='black')\n",
     "        \n",
-    "    # Set labels and title\n",
     "    plt.title(title)\n",
     "    plt.xlabel(xlabel)\n",
     "    plt.ylabel(ylabel)\n",
@@ -122,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "52f128d3",
    "metadata": {},
    "outputs": [
@@ -154,7 +160,6 @@
     "print(user_active_degree_counts)\n",
     "user_active_degree_counts = user_active_degree_counts.sort_index()\n",
     "\n",
-    "# Plot the bar chart with percentages\n",
     "plot_bar(\n",
     "    user_active_degree_counts,\n",
     "    title='User Active Degree Distribution',\n",
@@ -287,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "85db7190",
    "metadata": {},
    "outputs": [
@@ -303,7 +308,6 @@
     }
    ],
    "source": [
-    "# count by ranges of follow_user_num of 15\n",
     "follow_user_num_counts = data['follow_user_num'].value_counts(bins=range(0, 500, 15))\n",
     "plot_bar(\n",
     "    follow_user_num_counts,\n",
@@ -326,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "85046ecf",
    "metadata": {},
    "outputs": [
@@ -343,11 +347,9 @@
    ],
    "source": [
     "follow_user_num_ranges = data['follow_user_num_range'].value_counts()\n",
-    "# Specify the order of the categories\n",
     "follow_user_num_ranges = follow_user_num_ranges.reindex(\n",
     "    ['0','(0,10]','(10,50]', '(50-100]', '(100,150]', '(150,250]', '(250, 500]', '500+'], fill_value=0\n",
     ")\n",
-    "# Plot the bar chart with percentages\n",
     "plot_bar(\n",
     "    follow_user_num_ranges,\n",
     "    title='Follow User Number Ranges Distribution',\n",
@@ -406,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "14ca195e",
    "metadata": {},
    "outputs": [
@@ -423,11 +425,9 @@
    ],
    "source": [
     "fans_user_num_range = data['fans_user_num_range'].value_counts()\n",
-    "# Specify the order of the categories\n",
     "fans_user_num_range = fans_user_num_range.reindex(\n",
     "    ['0','[1,10)','[10,100)', '[100,1k)', '[1k,5k)', '[5k,1w)', '[1w, 10w)'], fill_value=0\n",
     ")\n",
-    "# Plot the bar chart with percentages\n",
     "plot_bar(\n",
     "    fans_user_num_range,\n",
     "    title='Fan User Number Ranges Distribution',\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bb4ef41d",
    "metadata": {},
    "outputs": [
@@ -821,7 +821,6 @@
     "    ylabel='Count',\n",
     "    percentages=True\n",
     ")\n",
-    "# distribution of features\n",
     "plot_bar(\n",
     "    items_data['feat'].value_counts(),\n",
     "    title='Feature Distribution',\n",
