format(final): rendu final

--- a/notebooks/EDA/EDA_interactions.ipynb
+++ b/notebooks/EDA/EDA_interactions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Anaysis of the KuaiRec Dataset By Samy YACEF\n",
     "<p align=\"center\">\n",
-    "    <img width=\"721\" alt=\"cover-image\" src=\"../data_final_project/KuaiRec 2.0/figs/KuaiRec.png\">\n",
+    "    <img width=\"721\" alt=\"cover-image\" src=\"../../img/KuaiRec.png\">\n",
     "</p>\n",
     "\n",
     "## Dataset\n",
